# core

./: .gitignore  .gitmodules  .header_template  AGENTS.md  BDEV_TEST_VERIFICATION.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COMPILATION_FIX_SUMMARY.md  COMPILATION_STATUS.md  CPPLINT.cfg  MISSING_DATA_STRUCTURES.md  OUTPUT_COPY_SYNC_ANALYSIS.md  README.md  SYNCHRONIZATION_FIXES_SUMMARY.md  TEST_SDIST.md  install.hk.sh  install.sh  miniconda.ipynb  pyproject.toml  setup.py  test_mmap_simple  test_sdist_install.sh
.claude/: settings.local.json
.claude/agents/: incremental-logic-builder.md  namespace-porter.md
.devcontainer/: CUDA_SETUP.md  Dockerfile  README.md  devcontainer.json  install-nvidia-container-toolkit.sh
.github/workflows/: build-and-test.yml  build-containers.yaml  build-core-containers.yaml  build-dep-containers.yaml  build-dist.yml  build-pip.yml  install-conda.yml  publish.yml  r.yml  sanitizers.yml  spack.yml
CI/: calculate_coverage.sh  lsan_suppressions.txt  run_sanitizers.sh
ai-prompts/: phase1-merging.md  phase8-install.md  phase9-del-old-hshm.md
cmake/: IowarpCoreCommon.cmake  IowarpCoreConfig.cmake.in
cmake/detect/: CMakeLists.txt
conda/: meta.yaml
context-assimilation-engine/: CLAUDE.md  CMakeLists.txt
context-assimilation-engine/ai-prompts/: phase1-runtime.md  phase2-file-assim.md
context-assimilation-engine/config/: wrp_config_example.yaml
context-assimilation-engine/core/: CMakeLists.txt
context-assimilation-engine/core/src/: core_client.cc  core_runtime.cc
context-assimilation-engine/core/util/: wrp_cae_omni.cc
context-assimilation-engine/docker/: build.Dockerfile  deploy.Dockerfile  local.Dockerfile  local.sh
context-assimilation-engine/test/unit/: CMakeLists.txt  test_cae_comprehensive.cc  wrp_config.yaml
context-exploration-engine/api/: CMakeLists.txt
context-exploration-engine/api/demo/: wrp_conf.yaml
context-exploration-engine/api/include/wrp_cee/api/: context_interface.h
context-exploration-engine/api/src/: context_interface.cc  python_bindings.cc
context-exploration-engine/api/test/: CMakeLists.txt  test_context_bundle.cc  test_context_comprehensive.cc  test_context_destroy.cc  test_context_interface.py  test_context_interface_enhanced.py  test_context_query.cc  wrp_config.yaml
context-runtime/: CMakeLists.txt
context-runtime/ai-prompts/Part1: BasicTasks/: phase2-chimod.md  phase4-admin.md
context-runtime/ai-prompts/Part1_BasicTasks/: phase1-structure.md  phase14-blocking.md  phase2-chimod.md  phase3-work-orch.md  phase4-admin.md  phase6-comux.md  phase7-route.md
context-runtime/ai-prompts/Part2: Networking/: phase1-modified.md  phase1.md  phase2.md  phase6.md
context-runtime/benchmark/: wrp_run_thrpt_benchmark.cc
context-runtime/config/: chimaera_default.yaml
context-runtime/docs/: deployment.md  module_dev_guide.md  scheduler.md  task_flow.md
context-runtime/src/: CMakeLists.txt  admin.cc  chimaera.cc  chimaera_manager.cc  config_manager.cc  integer_timer.cc  ipc_manager.cc  local_transfer.cc  module_manager.cc  pool_manager.cc  pool_query.cc  task.cc  task_archive.cc  task_queue.cc  types.cc  work_orchestrator.cc  worker.cc
context-runtime/test/: CMakeLists.txt  simple_test.h
context-runtime/util/: CMakeLists.txt  chi_refresh_repo.cc  chimaera_compose.cc  chimaera_monitor.cc  chimaera_start_runtime.cc  chimaera_stop_runtime.cc
context-transfer-engine/: CMakeLists.txt
context-transfer-engine/adapter/: CMakeLists.txt  adapter_constants.h  adapter_types.h  cae_config.cc  cae_config.h
context-transfer-engine/benchmark/: CMakeLists.txt  cte_config_ram.yaml  cte_score_bench_config.yaml  wrp_cte_bench.cc  wrp_cte_score_bench.cc  wrp_cte_score_bench.sh
context-transfer-engine/config/: cte_config.yaml  cte_example.yaml
context-transfer-engine/core/: CMakeLists.txt  chimaera_mod.yaml
context-transfer-engine/core/include/wrp_cte/core/: content_transfer_engine.h  core_client.h  core_config.h  core_dpe.h  core_runtime.h  core_tasks.h  core_tasks.h.backup  transaction_log.h
context-transfer-engine/core/include/wrp_cte/core/autogen/: core_methods.h
context-transfer-engine/core/src/: content_transfer_engine.cc  core_client.cc  core_config.cc  core_dpe.cc  core_runtime.cc  tag.cc
context-transfer-engine/core/src/autogen/: core_lib_exec.cc
context-transfer-engine/docs/: config.md  cte.md
context-transfer-engine/test/: CMakeLists.txt
context-transfer-engine/test/integration/: CMakeLists.txt
context-transfer-engine/test/integration/distributed/: CMakeLists.txt  docker-compose.yaml  run_tests.sh  wrp_config.yaml
context-transfer-engine/test/integration/restart/: test_restart_compose.yaml
context-transfer-engine/wrapper/: CMakeLists.txt
context-transport-primitives/: CMakeLists.txt  README.md  vcpkg.json
context-transport-primitives/ai-prompts/: hshm2.md
context-transport-primitives/benchmark/: allocator_benchmark.cc
context-transport-primitives/docker/: local.sh
context-transport-primitives/scripts/: README_COMPRESSION_MODELS.md  load_deps.sh
context-transport-primitives/src/: CMakeLists.txt  malloc_allocator.cc  system_info.cc
context-transport-primitives/test/: simple_client_test.cc  simple_server_test.cc
context-transport-primitives/test/unit/compress/: CMakeLists.txt  compression_parameter_study_results.csv  lossy_compression_benchmark_results.csv  plot_parameter_study.py  test_compress.cc  test_compress_lossy_parameter_study.cc  test_compress_parameter_study.cc  test_compression_benchmark.cc  test_dense_nn_predictor.cc  test_xgboost_predictor.cc
docker/: build.Dockerfile  local.sh
docker/test_external/: wrp_config_example.yaml
docker/wrp_cte_bench/: cte_score_bench_config.yaml
docs/: contributing.md
installers/vcpkg/: vcpkg.json
iowarp_core/: bin_wrapper.py
jarvis_iowarp/pipelines/: basic_runtime.yaml  benchmark_latency.yaml  benchmark_throughput.yaml  cte_gray_scott_compress.yaml  distributed_network_test.yaml  distributed_test_container.yaml
runtime/docker/: build.Dockerfile  local.Dockerfile
test/: simple_test.h
(+374 files in other folders)
